⬆️ add jcenter deps

--- a/quick-percent/build.gradle
+++ b/quick-percent/build.gradle
@@ -1,6 +1,31 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'quick-percent'
+
+    publishedGroupId = 'com.theapache64.quick-percent'
+    libraryName = 'quick-percent'
+    artifact = 'quick-percent'
+
+    libraryDescription = 'A simple kotlin extension library to play with percentage calculation'
+
+    siteUrl = 'https://github.com/theapache64/quick-percent'
+    gitUrl = 'https://github.com/theapache64/quick-percent.git'
+
+    libraryVersion = '0.0.1-alpha01'
+
+    developerId = 'theapache64'
+    developerName = 'theapache64'
+    developerEmail = 'theapache64@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
+}
+
+
 android {
     compileSdkVersion 28
     buildToolsVersion "29.0.0"
@@ -9,10 +34,9 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        versionCode 101
+        versionName "0.0.1-alpha01"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
     }
 
@@ -28,9 +52,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
+
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
+apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
